# TPOR

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
archive/: Greedy_Alex.cpp
cmake/: AddPythonTarget.cmake  EnableBoostSupport.cmake  EnableHDF5Support.cmake  EnableMoabSupport.cmake  Macros.cmake  ProjectName.cmake  Version.cmake
core/: CMakeLists.txt
core/cli/: CMakeLists.txt  seedmeshgenerator.cpp  treatmentplanner.cpp
core/python/: OrganMaskProcessor.py  SeedRadialDoseFunctionFitter.py  SliceManager.py  UltrasoundImageManager.py  UltrasoundImageMetadataManager.py  UltrasoundImagePreviewer.py  UltrasoundImageProcessor.py  UltrasoundSliceManager.py
core/src/: AdjointDataGenerator.cpp  AdjointDataGenerator.hpp  Amersham6702Seed.cpp  Amersham6702Seed.hpp  Amersham6711Seed.cpp  Amersham6711Seed.hpp  Amersham6733Seed.cpp  Amersham6733Seed.hpp  Amersham9011Seed.cpp  Amersham9011Seed.hpp  ArrayTraits.hpp  ArrayTraitsDecl.hpp  BebigI25S06Seed.cpp  BebigI25S06Seed.hpp  Best2301Seed.cpp  Best2301Seed.hpp  Best2335Seed.cpp  Best2335Seed.hpp  BinarySearch.hpp  BinarySearch_def.hpp  BrachytherapyAdjointDataGenerator.cpp  BrachytherapyAdjointDataGenerator.hpp  BrachytherapyCommandLineProcessor.cpp  BrachytherapyCommandLineProcessor.hpp  BrachytherapyDynamicWeightSeedPosition.cpp  BrachytherapyDynamicWeightSeedPosition.hpp  BrachytherapyPatient.cpp  BrachytherapyPatient.hpp  BrachytherapyPatientFileHandler.cpp  BrachytherapyPatientFileHandler.hpp  BrachytherapyPatient_def.hpp  BrachytherapySeed.cpp  BrachytherapySeed.hpp  BrachytherapySeedFactory.cpp  BrachytherapySeedFactory.hpp  BrachytherapySeedFileHandler.cpp  BrachytherapySeedFileHandler.hpp  BrachytherapySeedHelpers.cpp  BrachytherapySeedHelpers.hpp  BrachytherapySeedPosition.cpp  (+63 more)
core/test/: CMakeLists.txt  tstAmersham6702Seed.cpp  tstAmersham6711Seed.cpp  tstAmersham6733Seed.cpp  tstAmersham9011Seed.cpp  tstBebigI25S06Seed.cpp  tstBest2301Seed.cpp  tstBest2335Seed.cpp  tstBinarySearch.cpp  tstBrachytherapyCommandLineProcessor.cpp  tstBrachytherapyPatientFileHandler.cpp  tstBrachytherapySeed.cpp  tstBrachytherapySeedFactory.cpp  tstContractException.cpp  tstDraximageLS1Seed.cpp  tstHDF5FileHandler.cpp  tstIBt1251LSeed.cpp  tstIIEMTreatmentPlanner.cpp  tstImagynIS12501Seed.cpp  tstImplantSciences3500Seed.cpp  tstInterpolation.cpp  tstIsoAidIAI125ASeed.cpp  tstIsoAidIAPd103ASeed.cpp  tstMBISL125SH125Seed.cpp  tstNASIMED3631Seed.cpp  tstNASIMED3633Seed.cpp  tstNucletron130002Seed.cpp  tstSourceTechSTM1251Seed.cpp  tstTheragenics200Seed.cpp  tstTheragenicsAgX100Seed.cpp
doc/: CMakeLists.txt  Doxyfile
doc/manual/: CMakeLists.txt  Doxyfile  Doxyfile.in  mainpage.dox  misc.dox
doc/presentations/: Makefile  overview_presentation.tex
doc/presentations/figures/: TPOR_code_flow.dia  TPOR_code_flow.eps
images/ultrasound/: baron.header  carlson.header  dittmar.header  duckart.header  duckart.img  duffrin_tmp.header  duffrin_tmp.img  faber.9_11_98.img  jkahle.header  jkahle.img  kahle.header  medphys.header  oestreicher.header  olson_us.header  p1.img  p10.header  p10.img  p11.header  p11.img  p12.header  p12.img  p13.header  p13.img  p14.header  p15.header  p15.img  p16.header  p17.header  p2.header  p3.header  p3.img  p4.header  p5.header  p6.header  p7.header  p8.header  p8.img  p9.header  saupe_us.header  smieja.header  (+6 more)
images/ultrasound/p1/: p1.header
matlab/: convertorgantohdf5.py  convertseedtohdf5.py
matlab/Jeremy_brachytherapy/: dosecalc.m  greedy2dfct.m  mkEval2d.m  rotate_image.m
matlab/Luke_brachytherapy/: Displacement.m~  DoseMatrix.mat  Luke_individual_needles.m  Luke_new_approch.m  Objective_Fnct.m  dose_plot.m  luke_test.m  needle_test.m  seed_test  seed_test.m  suadose.mat
matlab/Sua_brachytherapy/: adjoint_data-SUA  converttohdf5.py  data_extraction.m  drawBkwIsoGreedy.m  drawDVH1greedy.m  mkEvaGreedy.m  mkadflROI.m  mkdoseNIST.m
matlab/Vibha_brackytherapy/: data_extraction.m  doseupdate_fun.m  drawBkwIsoGreedy.m  drawDVH1greedy.m  make_finalaniso.m  make_rankinganiso.m  make_rankinganiso_new.m  mkadflROI_2301.m  mkanisoratio1.m  print_ratios.m  testplot.m
matlab/brachytherapy_mask_creation/: experimentFOV1.m  mkFOV.m  mkMask.m  mkMask2.m  mkMask3.m  mkMask_updated.m  showUS.m
pytpor/: CMakeLists.txt  __init__.py
pytpor/brachytherapy/: CMakeLists.txt
pytpor/brachytherapy/seeds/: BrachytherapySeed.i  BrachytherapySeedFactory.i  CMakeLists.txt
pytpor/ultrasound/: __init__.py  imagemanager.py  imagemetadata.py  imagepreviewer.py  imageslicemanager.py  imagesliceupdatemanager.py  imageupdatemanager.py  maskprocessor.py
scripts/: CMakeLists.txt  configure.sh  extractcenterslices.py  fitseedradialdose.py  processultrasoundimage.py  updateultrasoundimage.py
scripts/matlab/Jeremy_brachytherapy/: GREEDY_CD_DIRECT.m  GREEDY_ONLY_CD.m  GREEDY_PLUS_CD.m  drawDVH.m  mknewranking.m  param_table.m
scripts/matlab/Luke_brachytherapy/: AR_MODEL.m  DisplacementVector.m  Displacement_Vec.m  DoseNist99.mat  ObjectiveFunction.m  Overlap.m  SeedDose.m  SeedRepositioning.m  Seed_Repo.m  input_data.m  mkSeedDose.m  mkdoseNIST.m  newdose.m
scripts/matlab/Sua_brachytherapy/: drawDVH2greedy.m  f_Ciso1.m  f_Nrange.m  f_greedy.m  greedy.m  needle_template-SUA  organ_extraction.m
scripts/matlab/Vibha_brackytherapy/: adflloop.m  adjoint_data_iso-VIBHA  doseupdate_needle.m  mkEvaGreedy_directional.m  mksupermatrix.m  organ_mesh-VIBHA
src/: ArrayTraits.hpp  Empty.hpp  ExceptionCatchMacros.hpp  HDF5FileHandler.hpp  HDF5FileHandler_def.hpp  HDF5TypeTraits.hpp  MOABException.hpp
src/brachytherapy/: Greedy_Alex_Dynamic_Weighting.cpp  Greedy_Sua.cpp  Greedy_Vibha.cpp  advanced_shared_array.hpp
