ADD_SUBDIRECTORY(brachytherapy)

SET(PYTPOR_FILES ${PYTPOR_FILES}
  __init__.py)
SET(PYTPOR_DIRECTORIES ${PYTPOR_DIRECTORIES} 
  ultrasound)

INSTALL(FILES ${PYTPOR_FILES}
  DESTINATION ${CMAKE_INSTALL_PREFIX}/pytpor
  PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
INSTALL(DIRECTORY ${PYTPOR_DIRECTORIES}
  DESTINATION ${CMAKE_INSTALL_PREFIX}/pytpor
  FILE_PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)