FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})
FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

SET(CMAKE_SWIG_FLAGS)

SET_PROPERTY(SOURCE BrachytherapySeed.i
  PROPERTY CPLUSPLUS ON)
SET_PROPERTY(SOURCE BrachytherapySeedFactory.i
  PROPERTY CPLUSPLUS ON)

SWIG_ADD_MODULE(seed python BrachytherapySeed.i)
SWIG_LINK_LIBRARIES(seed ${PROJECT_NAME}_seeds ${PYTHON_LIBRARIES})
SWIG_ADD_MODULE(factory python BrachytherapySeedFactory.i)
SWIG_LINK_LIBRARIES(factory ${PROJECT_NAME}_seeds ${PYTHON_LIBRARIES})